# c-utils

./: CMakeLists.txt
kmath/: CMakeLists.txt  vector.c  vector.h
kmath/include/: vector.h
kstr/: CMakeLists.txt
kstr/src/: str.c
math/: CMakeLists.txt
str/: CMakeLists.txt
str/include/: str.h
utils/: general.c  general.h
